Fix() - Navbar collapse shows at the right side

--- a/hikeebs/src/css/ShopGrid.module.css
+++ b/hikeebs/src/css/ShopGrid.module.css
@@ -2,7 +2,7 @@
     top:200px;
     position: relative;
     display: grid;
-    grid-template-columns: 200px 200px 200px 200px ;
+    grid-template-columns: auto auto auto auto ;
     gap: 40px;
     padding: 40px;
     justify-content: center;
@@ -12,6 +12,6 @@
   
   @media (max-width: 580px) {
     .shopsGrid {
-      grid-template-columns: 25% 25% 25% 25%;
+      grid-template-columns: 50% 50% ;
     }
   }
